--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ img {
   overflow: hidden;
   z-index: 0;
 
-  background-image: url('C:/Users/ADMIN/Desktop/mini_project/image.jpg');
+  background-image: url('C:/Users/ADMIN/Desktop/mini_project/istockphoto-1321777631-170667a.webp');
   background-position: cover;
   background-attachment: scroll; 
   background-size: 100% 100%;
